# patent-data-security

./: .env.example  .gitignore  LICENSE  README.md  for论文技术.md  pyproject.toml
config/: settings.example.toml
config/taxonomy/: ipc_taxonomy.json  sources.json
docs/: Step4小分类模型改进方案.md  human_gold_annotation_guidelines.md  patent_identification_methodology.md  project-notes.md  step3_baseline_accuracy.md  step4_small_model_improvement.md
loop/: .gitignore  README.md  __init__.py
loop/step1/: README.md  __init__.py  config.example.json  rules.template.json  step1_public.py
loop/step1/tests/: __init__.py  test_step1_public.py
loop/step2/: README.md  __init__.py  config.example.json  prompt.template.txt  response.schema.json  step2_public.py
loop/step2/tests/: __init__.py  test_step2_public.py
loop/step3/: README.md  __init__.py  config.example.json  step3_public.py
loop/step3/tests/: __init__.py  test_step3_public.py
outputs/: patent-data-security-flow.pptx.inspect.ndjson  数据安全专利识别方法_论文写作版.docx
pipeline/: __init__.py
pipeline/common/: __init__.py  datasets.py  io.py  records.py
pipeline/step1/: __init__.py  __main__.py  matcher.py  runner.py  taxonomy.py
pipeline/step1/resources/: CHANGELOG.md  expert_keywords_0715.json  keywords.json  sources.json  validation_protocol.json
pipeline/step1/tests/: test_matcher.py  (+2 more)
pipeline/step2/: __init__.py  __main__.py  client.py  prompt.py  runner.py  schema.py  tasks.py
pipeline/step3/: README.md  __init__.py  __main__.py  client.py  evaluation.py  k3_review.py  prompt.py  runner.py  sampling.py  schema.py
pipeline/step4/: README.md  __init__.py  __main__.py  data.py  metrics.py  train.py
scripts/: step1_keyword_extraction.py  step2_candidate_routing.py  step2_llm_classification.py  step3_gold_sampling.py  step3_prepare_llm_batches.py  step4_submit_llm_batch.py  step5_merge_llm_results.py  step6_audit_results.py
specs/001-docs-ipc-taxonomy/: research.md  spec.md
specs/002-hybrid-classifier/: spec.md
src/patent_data_security/: __init__.py  __main__.py  audit.py  classification.py  cli.py  keyword_extraction.py  llm.py  pipeline.py  routing.py  step2_prompt.py  step2_runner.py
tests/: test_keyword_extraction.py  test_llm.py  test_pipeline.py  test_routing.py  test_step2_prompt.py  test_step2_runner.py  test_step3_sampling.py
tools/: README.md  codex_review_2021.py  codex_review_negative.py  migrate_review_labels.py
v1/: .env.example  README.md
v1/docs/: patent_identification_methodology.md
v1/outputs/: patent-data-security-flow.pptx
v1/scripts/: step2_llm_classification.py
v1/tests/: test_datasets.py  test_records.py  test_routing.py  test_step2_prompt.py  test_step2_runner.py  test_taxonomy.py
(+29 files in other folders)
