[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-data-security"
version = "0.2.0"
description = "Auditable S/E routing for Chinese data-security patents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "json-repair>=0.61,<0.62",
  "openai>=1.68,<3",
  "pydantic>=2.8,<3",
  "pyahocorasick>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<10",
  "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.setuptools.package-data]
"pipeline.step1" = ["resources/*.json", "resources/*.md"]
"pipeline.step2" = ["resources/*.json", "resources/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["pipeline"]
